--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lennon</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="profileimg.jpg">
 </head>
 <body>
     <nav>
