Fixed Burger Btn

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="icon" href="profileimg.jpg">
 </head>
 <body>
+    <!-- Preloader -->
+    <div class="preloader">
+        <div class="loader"></div>
+    </div>
+    <!-- Preloader End -->
     <nav>
         <div class="navbar">
             <div class="container">
